--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
     "@sendgrid/mail": "^8.1.5",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "cron": "^4.3.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^7.0.0"
   }
 }
