--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "cron": "^4.3.0",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "joi": "^17.13.3",
