--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "cors": "^2.8.5",
     "cron": "^4.3.0",
     "dayjs": "^1.11.13",
+    "dayjs-plugin-duration": "^0.0.1-security",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "joi": "^17.13.3",
