--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.1",
+    "multer": "^1.4.5-lts.2",
     "node-cron": "^3.0.3",
-    "nodemailer": "^7.0.0"
+    "nodemailer": "^7.0.0",
+    "react-router-dom": "^7.6.0"
   }
 }
