--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "multer": "^1.4.5-lts.2",
     "node-cron": "^3.0.3",
     "nodemailer": "^7.0.0",
-    "react-router-dom": "^7.6.0"
+    "react-router-dom": "^7.6.0",
+    "stripe": "^18.1.1"
   }
 }
