--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dayjs": "^1.11.13",
     "dayjs-plugin-duration": "^0.0.1-security",
     "dotenv": "^16.5.0",
+    "ejs": "^3.1.10",
     "express": "^5.1.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
@@ -14,6 +15,7 @@
     "multer": "^1.4.5-lts.2",
     "node-cron": "^3.0.3",
     "nodemailer": "^7.0.0",
-    "react-router-dom": "^7.6.0"
+    "react-router-dom": "^7.6.0",
+    "stripe": "^18.1.1"
   }
 }
