--- a/package.json
+++ b/package.json
@@ -1,22 +1,17 @@
 {
   "dependencies": {
-    "@sendgrid/mail": "^8.1.5",
     "bcryptjs": "^3.0.2",
+    "body-parser": "^2.2.0",
     "cors": "^2.8.5",
-    "cron": "^4.3.0",
     "dayjs": "^1.11.13",
-    "dayjs-plugin-duration": "^0.0.1-security",
     "dotenv": "^16.5.0",
-    "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-fileupload": "^1.5.1",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.1",
-    "multer": "^1.4.5-lts.2",
     "node-cron": "^3.0.3",
     "nodemailer": "^7.0.0",
-    "react-router-dom": "^7.6.0",
     "stripe": "^18.1.1"
   }
 }
